force-app/main/default/objects/DocumentChecklistItem/fields/Address_upload__c.field-meta.xml
<CustomField>
    <fullName>Address_upload__c</fullName>
    <label>Address upload</label>
    <length>10</length>
    <type>Text</type>
</CustomField>