force-app/main/default/objects/DocumentChecklistItem/fields/Id_upload__c.field-meta.xml
<CustomField>
    <fullName>Id_upload__c</fullName>
    <label>Id upload</label>
    <length>2</length>
    <type>Text</type>
</CustomField>