force-app/main/default/objects/DocumentChecklistItem/fields/Income_Proof__c.field-meta.xml
<CustomField>
    <fullName>Income_Proof__c</fullName>
    <label>Income Proof</label>
    <length>10</length>
    <type>Text</type>
</CustomField>