force-app/main/default/objects/DocumentChecklistItem/validationRules/Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason</fullName>
    <active>true</active>
    <description>Rejection Reason is required when rejecting a document.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, &quot;Rejected&quot;),
 ISBLANK(Comments)
)</errorConditionFormula>
    <errorDisplayField>IsAccepted</errorDisplayField>
    <errorMessage>Enter rejection reason</errorMessage>
</ValidationRule>